# c2-portable-updater

./: Cargo.toml  README.md  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  release.yml
src/: args.rs  extract.rs  main.rs  result.rs  win.rs
