[package]
name = "c2-portable-updater"
version = "0.1.3"
edition = "2021"
authors = ["Nerixyz"]
description = "Chatterino portable updater"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nerixyz/c2-portable-updater"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
thiserror = "1.0.60"
widestring = "1.1.0"
win-msgbox = "0.1.3"
windows-sys = { version = "0.52.0", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
] }
zip = { version = "1.2.3", default-features = false, features = [
    "deflate",
    "bzip2",
] }

[profile.release]
opt-level = 'z'
lto = true
panic = "abort"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-pc-windows-msvc"]
# Checksums to generate for each App
checksum = "sha256"
# Publish jobs to run in CI
pr-run-mode = "plan"
