[package]
name = "c2-portable-updater"
version = "0.1.3"
edition = "2021"
authors = ["Nerixyz"]
description = "Chatterino portable updater"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nerixyz/c2-portable-updater"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
thiserror = "2.0.12"
widestring = "1.2.0"
win-msgbox = "0.2.1"
windows-sys = { version = "0.59.0", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
] }
zip = { version = "2.5.0", default-features = false, features = [
    "deflate",
    "bzip2",
] }

[profile.release]
opt-level = 'z'
lto = true
panic = "abort"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
